added support for different types of features

--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -15,7 +15,7 @@
 		<script type="text/javascript" src="{% static 'bower_components/bootstrap/dist/js/bootstrap.js' %}"></script>
 		<!-- Mapbox -->
 		<script>
-			L_PREFER_CANVAS = true;
+			/*L_PREFER_CANVAS = true;*/
 		</script>
 		<script src='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
 		<link href='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />
