modifications to detail template and admin views

--- a/templates/map/detail.html
+++ b/templates/map/detail.html
@@ -1,8 +1,8 @@
 {% extends 'map/base.html' %}
 
 {% block content %}
-
-<div id="" class="map-small" {% if feature.thumbnail %} style="background: url('/media/{{ feature.thumbnail }}'); background-size: cover; background-position: {% if feature.thumbnail_position == 'TOP' %} top; {% elif feature.thumbnail_position == 'BOTTOM' %} bottom; {% else %} center;" {% endif %} {% endif %} class="hidden-sm hidden-xs"></div>
+{% load static %}
+<div id="" class="map-small" style="background: {% if feature.thumbnail %}url('/media/{{ feature.thumbnail }}'){% else %}url('{% static 'img/no_thumbnail_large.png' %}');{% endif %} background-size: cover; background-position: {% if feature.thumbnail_position == 'TOP' %} top; {% elif feature.thumbnail_position == 'BOTTOM' %} bottom; {% else %} center; {% endif %}" class="hidden-sm hidden-xs"></div>
 <div class="container">
 	<div class="row">
 		<div class="col-md-3">
