minor change to guide text

--- a/templates/map/add_image.html
+++ b/templates/map/add_image.html
@@ -62,7 +62,7 @@
 			</div>
 			<div class="col-xs-12 col-md-4">
 				<h4>How to Add an Image</h4>
-				<p>Click the 'Browse' button above to select a file from your computer. Your image should be in .jpg, .png, or .gif format, and should be no larger than 1 megabyte in size.</p>
+				<p>Click the 'Browse' button above to select a file from your computer. Your image should be in .jpg, .png, or .gif format, and should be no larger than 2.5MB.</p>
 			</div>
 		</div>
 	</div>
