removed placeholder text for blog

--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -45,7 +45,7 @@
 		</div>
 		<div class="col-xs-12 col-md-4"><!-- News -->
 			<h1 class="front-page-heading">News</h1>
-			<p>News Content to go here when the blog function's been activated</p>
+			<!--<p>News Content to go here when the blog function's been activated</p>-->
 		</div><!-- / News -->
 	</div>
 
