--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -77,6 +77,7 @@
 			      	<ul class="nav navbar-nav navbar-right">
 	    				<li><a href="{% url 'site_home' %}">Home</a></li>
 	    				<li><a href="{% url 'map_home' %}">Map</a></li>
+	    				<li><a href="{% url 'blog' %}">News</a></li>
 	    				<li class="dropdown">
     						<a id="categoryLinksLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" role="button">Themes <span class="caret"></span></a>
     						<ul class="dropdown-menu" aria-labelledby="categoryLinksLabel">
