--- a/templates/map/detail.html
+++ b/templates/map/detail.html
@@ -7,13 +7,13 @@
 	<div class="row">
 		<div class="col-md-3">
 		</div>
-		<div class="col-xs-12 col-md-7">
+		<div class="col-xs-12 col-md-7" itemscope itemtype="http://schema.org/Place">
 			{% if feature.b_name %}
-				<h1>{{ feature.b_name }} <div class="btn-group"><a href="{% url 'map_home' %}?highlight={{ feature.id }}" class="btn btn-default">Back to Map</a>{% if not histories and not descriptions and not stories and not images and not media %}{% else %}<a href="{% if user.is_authenticated %}{% url 'ugc_choice' feature.id %}{% else %}{% url 'account_login' %}?last_feature={{ feature.id }}{% endif %}" class="btn btn-primary">Add Content</a>{% endif %}</div></h1>
-				<h2><small>{% if feature.short_description %}{{ feature.short_description }} {% endif %}{% if feature.original %}| Constructed <a href="{% url 'date_range' feature.original %}">{{ feature.original }}{% endif %}</a></small> {% if user.is_authenticated and user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a>{% endif %} </h2>
+				<h1><span itemprop="name">{{ feature.b_name }}</span> <div class="btn-group"><a href="{% url 'map_home' %}?highlight={{ feature.id }}" class="btn btn-default">Back to Map</a>{% if not histories and not descriptions and not stories and not images and not media %}{% else %}<a href="{% if user.is_authenticated %}{% url 'ugc_choice' feature.id %}{% else %}{% url 'account_login' %}?last_feature={{ feature.id }}{% endif %}" class="btn btn-primary">Add Content</a>{% endif %}</div></h1>
+				<h2><small>{% if feature.short_description %}<span itemprop="description">{{ feature.short_description }}</span> {% endif %}{% if feature.original %}| Constructed <a href="{% url 'date_range' feature.original %}">{{ feature.original }}{% endif %}</a></small> {% if user.is_authenticated and user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a>{% endif %} </h2>
 			{% else %}
-				<h1>{{ feature.address }} <div class="btn-group"><a href="{% url 'map_home' %}?highlight={{ feature.id }}" class="btn btn-default">Back to Map</a><a href="{% if user.is_authenticated %}{% url 'ugc_choice' feature.id %}{% else %}{% url 'account_login' %}?last_feature={{ feature.id }}{% endif %}" class="btn btn-primary">Add Content</a></div></h1>
-				<h2><small>{% if feature.short_description %}{{ feature.short_description }} {% endif %}{% if feature.original %}| Constructed <a href="{% url 'date_range' feature.original %}">{{ feature.original }}{% endif %}</a></small> {% if request.user.is_authenticated and request.user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a>{% endif %} </h2>
+				<h1><span itemprop="address">{{ feature.address }}</span> <div class="btn-group"><a href="{% url 'map_home' %}?highlight={{ feature.id }}" class="btn btn-default">Back to Map</a><a href="{% if user.is_authenticated %}{% url 'ugc_choice' feature.id %}{% else %}{% url 'account_login' %}?last_feature={{ feature.id }}{% endif %}" class="btn btn-primary">Add Content</a></div></h1>
+				<h2><small>{% if feature.short_description %}<span itemprop="description">{{ feature.short_description }}</span> {% endif %}{% if feature.original %}| Constructed <a href="{% url 'date_range' feature.original %}">{{ feature.original }}{% endif %}</a></small> {% if request.user.is_authenticated and request.user.is_staff %} <a href="{% url 'admin:map_feature_change' feature.id %}" class="btn btn-default btn-sm">Edit</a>{% endif %} </h2>
 			{% endif %}
 		</div>
 		<div class="col-xs-2">
@@ -121,10 +121,10 @@
 					<div role="tabpanel" class="tab-pane active" id="history">
 					{% for document in histories %}
 						{% if document.aggregate == False %}
-						<div class="document">
+						<div class="document" itemscope itemtype="http://schema.org/ScholarlyArticle">
 							<span id="{{ document.title|slugify }}" class="detail_anchor"></span>
-							<h2>{{ document.title }}<br /><span class="small">Contributed by <a href="{% url 'all_content_by_author' document.author.id %}">{% if document.author.userprofile.display_name %}{{ document.author.userprofile.display_name }}{% else %}{{ document.author }}{% endif %}</a></span></h2>
-							{{ document.body_processed|safe }}
+							<h2><span itemprop="name">{{ document.title }}</span><br /><span class="small">Contributed by <a href="{% url 'all_content_by_author' document.author.id %}"><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{% if document.author.userprofile.display_name %}{{ document.author.userprofile.display_name }}{% else %}{{ document.author }}{% endif %}</span></span></a></span></h2>
+							<div itemprop="articleBody">{{ document.body_processed|safe }}</div>
 						</div>
 						{% endif %}
 					{% endfor %}
