--- a/templates/whitechapel_blog/blog_base.html
+++ b/templates/whitechapel_blog/blog_base.html
@@ -1,4 +1,5 @@
 {% extends 'map/base.html' %}
+{% load thumbnail %}
 {% block content %}
 
 <div class="container">
@@ -36,6 +37,36 @@
 				<li><a href="{% url 'posts_by_author' author.grouper.id %}">{% if author.grouper.userprofile.display_name %}{{ author.grouper.userprofile.display_name }}{% else %}{{ author.grouper }}{% endif %}</a></li>
 			{% endfor %}
 			</ul>
+			<hr />
+			<h3>Latest Map Contributions</h3>
+			{% for item in latest_map_contributions|slice:":4" %}
+			{% if item.created != None %}
+				{% if item.file %}
+				<div class="media">
+					<div class="media-left">
+						<a href="{% url 'detail' item.feature.id %}#images"><img src="{% thumbnail item.file 64x64 crop='0,0' %}" class="img-rounded"></a>
+					</div>
+					<div class="media-body">
+						<h3 class="media-heading"><a href="{% url 'detail' item.feature.id %}#{{ item.document_type }}">{{ item.title }}</a></h3>
+						<h4 class="small"><a href="{% url 'detail' item.feature.id %}">{{ item.feature }}</a> | <a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.created }}</h4>
+						<p class="results-preview">{{ item.description|truncatewords_html:20|striptags }}</p>
+					</div>
+				</div>
+				{% else %}
+				<div>
+					<h3><a href="{% url 'detail' item.feature.id %}#{{ item.document_type }}">{{ item.title }}</a></h3>
+					<h4 class="small"><a href="{% url 'detail' item.feature.id %}">{{ item.feature }}</a> | <a href="{% url 'all_content_by_author' item.author.id %}">{% if item.author.userprofile.display_name %}{{ item.author.userprofile.display_name }}{% else %}{{ item.author }}{% endif %}</a> | {{ item.created }}</h4>
+					{% if item.body_processed %}
+					<p class="results-preview">{{ item.body_processed|truncatewords_html:20|striptags }}</p>
+					{% elif item.description %}
+					<p class="results-preview">{{ item.description|truncatewords_html:20|striptags }}</p>
+					{% endif %}
+				</div>
+				{% endif %}		
+			{% endif %}
+
+			{% endfor %}
+
 		</div>
 	</div>
 </div>
