added welcome email

--- a/templates/map/ugc_choice.html
+++ b/templates/map/ugc_choice.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% load static %}
-<div class="jumbotron ugc-jumbotron" style="background-image: {% if feature.thumbnail %}url('/media/{{ feature.thumbnail }}'){% else %}url('{% static 'img/no_thumbnail_large.png' %}'){% endif %};">
+<div class="jumbotron ugc-jumbotron" style="background-image: url({% static 'img/darken.png' %}), {% if feature.thumbnail %}url('/media/{{ feature.thumbnail }}'){% else %}url('{% static 'img/no_thumbnail_large.png' %}'){% endif %};">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
