--- a/templates/whitechapel_blog/blog_base.html
+++ b/templates/whitechapel_blog/blog_base.html
@@ -64,8 +64,10 @@
 				</div>
 				{% endif %}		
 			{% endif %}
-
 			{% endfor %}
+			<hr />
+			<h3>Survey of London on Twitter</h3>
+			<a class="twitter-timeline" data-height="400" href="https://twitter.com/SurveyofLondon">Tweets by SurveyofLondon</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 		</div>
 	</div>
