light to dark menu bar

--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -166,7 +166,7 @@
 	<div class="row"><!-- Themes / Routes / Tours -->
 		<div class="col-xs-12">
 			<h1 class="front-page-heading">Explore Whitechapel</h1>
-			<p class="lead">Don't know where to begin? Click on a theme to start uncovering Whitechapel's past.</p>
+			<p class="lead">Click on a theme to start uncovering Whitechapel's past.</p>
 			<br />
 		</div>
 	</div>
