--- a/templates/map/base.html
+++ b/templates/map/base.html
@@ -47,7 +47,7 @@
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-		<nav class="navbar navbar-default navbar-fixed-top">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container-fluid">
 			    <div class="navbar-header navbar-left">
       				<a class="navbar-brand" href="/">Survey of London <span class="label label-primary" style="font-family: 'Helvetica', sans-serif;">Draft</span></a>
