--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -163,10 +163,10 @@
 	{% endif %}
 
 	{% if categories %}
-	<div class="row"><!-- Themes / Routes / Tours -->
+	<div class="row"><!-- Themes -->
 		<div class="col-xs-12">
 			<h1 class="front-page-heading">Explore Whitechapel</h1>
-			<p class="lead">Click on a theme to start uncovering Whitechapel's past.</p>
+			<p class="lead">Not sure where to start? Click on a theme to start uncovering Whitechapel's past.</p>
 			<br />
 		</div>
 	</div>
@@ -179,6 +179,12 @@
 				<a href="{% url 'map.views.category' category.id %}"><img src="{% thumbnail category.thumbnail 360x204 %}"></a>
 				<p><a href="{% url 'map.views.category' category.id %}">{{ category.name }}</a></p>
 			</div>
+		
+		{% if forloop.counter|divisibleby:4 %}
+		</div>
+		<div class="row themed-content">
+		{% endif %}
+
 		</div>
 		{% endif %}
 		{% endfor %}
