--- a/templates/whitechapel_pages/index.html
+++ b/templates/whitechapel_pages/index.html
@@ -87,7 +87,7 @@
 				{% for document in page.documents.all %}
 				{% if document.published == True %}
 				<div class="{% cycle 'col-xs-12' 'col-xs-12 col-md-6' 'col-xs-12 col-md-6' %}">
-					<img src="media/{{ document.feature.thumbnail }}" style="width: 100%;"/>
+					<a href="{% url 'detail' document.feature.id %}#images"><img src="{% thumbnail document.feature.thumbnail 400x225 crop='0,0' %}" class="img-rounded" style="width: 100%;"></a>
 					<h3><a href="{% url 'detail' document.feature.id %}#{{ document.document_type }}?{{ document.title|slugify }}">{{ document.title }}</a><br /><span class="small"><a href="{% url 'all_content_by_author' document.author.id %}">{{ document.author.userprofile.display_name }}</a> | {{ document.feature }}</span></h3>
 					<p>{{ document.body|safe|truncatewords_html:40|striptags }}</p>
 				</div>
@@ -123,8 +123,8 @@
 
 	</div><!-- / Featured Content and Latest Images -->
 
-	{% if page.media.all %}
-	<div class="row front-page-media"><!-- Featured Media -->
+	<!--{% if page.media.all %}
+	<div class="row front-page-media"><!-- Featured Media --><!--
 		<div class="col-xs-12">
 			<h1 class="front-page-heading">Audio and Video</h1>
 		</div>
@@ -145,7 +145,7 @@
 			{% endfor %}
 		</div>
 	</div>
-	{% endif %}
+	{% endif %}-->
 
 	{% if page.images %}
 	<!--<div class="row"> <!-- Featured images --><!--
